--- a/index.html
+++ b/index.html
@@ -5,16 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/53610cf1b6.js" crossorigin="anonymous"></script>
     <title>Mn - welcome</title>
 </head>
 <body>
     <header>
+        <div class="flex">
+            <div class=" width margin fonts">
+                <h4>MALIN WEDIN</h4>
+            </div>
+            <nav class="width">
+                <ul class="space flex margin list">
+                    <li id="" class=" paddingHeader"><a class="nav-links" href="#aboutMe">Om mig</a></li>
+                    <li id="" class=" paddingHeader"> <a class="nav-links" href="#freeTime">Intressen</a></li>
+                    <li class=" paddingHeader"><a class="nav-links" href="#contact">Kontakt</a></li>
+                </ul>
+            </nav>
+            <div class="margin marginRight"> 
+                <i class="margin fas fa-ellipsis-v"></i>
+            </div>
+        </div>
     </header>
 
     <main>
+
+        <div class="skanor flex centerImageMain">
+            <img src="./images/skanor.jpg" alt="">
+        </div>
+
+        <div id="aboutMe" class="flex width mainCenterWidth">
+                <h3>HEJ</h3>
+            
+            <p></p>
+
+        </div>
+        
+
+
+
     </main>
 
     <footer>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, eaque? Alias magni tempore voluptatum molestiae in laboriosam ratione impedit praesentium eum possimus quaerat qui, autem necessitatibus molestias, mollitia corporis cumque?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, eaque? Alias magni tempore voluptatum molestiae in laboriosam ratione impedit praesentium eum possimus quaerat qui, autem necessitatibus molestias, mollitia corporis cumque?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, eaque? Alias magni tempore voluptatum molestiae in laboriosam ratione impedit praesentium eum possimus quaerat qui, autem necessitatibus molestias, mollitia corporis cumque?</p>
     </footer>
 </body>
 </html>
