update dropdown, click, css.

--- a/index.html
+++ b/index.html
@@ -18,18 +18,22 @@
             <nav class="width">
                 <ul class="space flex margin list">
                     <li id="" class="paddingHeader"><a class="nav-links" href="#aboutMe">OM MIG</a></li>
-                    <li id="" class="paddingHeader"> <a class="nav-links" href="#freeTime">MIN FRITID</a></li>
+                    <li id="" class="paddingHeader"> <a class="nav-links" href="#freeTime">INTRESSEN</a></li>
+                    <li id="" class="paddingHeader"> <a class="nav-links" href="#freeTime">PROJEKT</a></li>
                     <li class=" paddingHeader"><a class="nav-links" href="#contact">KONTAKT</a></li>
                 </ul>
             </nav>
             <div class="menu">
                 <div class="flex column margin marginRight hideThis"></div>
-                    <i id="toggleThis" class="fas fa-ellipsis-v"></i>
-                
-                      
-                    <li><a href="#aboutMe">Om mig</a></li>
-                    <li><a href="#freeTime">Om mig</a></li>
-                    <li><a href="#contact">Om mig</a></li>
+                    <div class="flex margin">
+                        <i id="toggleThis" class="fas fa-ellipsis-v"></i>  
+                    </div>
+                    <div>
+                        <li><a id="afterClick" href="#aboutMe">OM MIG</a></li>
+                        <li><a id="" href="#freeTime">INTRESSEN</a></li>
+                        <li><a id="" href="#work">PROJEKT</a></li>
+                        <li><a id="" href="#contact">KONTAKT</a></li>
+                    </div>
                 </div>
             </div>
         </div>
@@ -43,7 +47,7 @@
                         <h3 class="mainPaddingTop">OM MIG</h3>
                         <p>Hej, jag heter Malin Wedin och är en Göteborgsbaserad tjej på 30 år.</p>
                         <p>Efter 10 år med nya destinationer varje dag så var det dags för något annat.</p>
-                        <p>Nu studerar jag Front end developer på Medieinstitutet och kämpar hårt för att förstå kodens värld</p>
+                        <p>Nu studerar jag Front end developer på Medieinstitutet och kämpar på för att förstå kodens värld</p>
                 </div>
                 <div id="freeTime">
                     <h3 class="mainPaddingTop">MIN FRITID</h3>
