--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <div class="flex">
-            <div class="width margin fonts">
+            <div class="flex width margin fonts">
                 <h4>MALIN WEDIN</h4>
             </div>
             <nav class="width">
-                <ul class="space flex margin list">
+                <ul class="center space flex margin list paddingUl">
                     <li id="" class="paddingHeader"><a class="nav-links" href="#aboutMe">OM MIG</a></li>
                     <li id="" class="paddingHeader"> <a class="nav-links" href="#freeTime">INTRESSEN</a></li>
                     <li id="" class="paddingHeader"> <a class="nav-links" href="#freeTime">PROJEKT</a></li>
@@ -24,15 +24,15 @@
                 </ul>
             </nav>
             <div class="menu">
-                <div class="flex column margin marginRight hideThis"></div>
+                <div class="flex column marginRight hideThis"></div>
                     <div class="flex margin">
                         <i id="toggleThis" class="fas fa-ellipsis-v"></i>  
                     </div>
                     <div>
-                        <li><a id="afterClick" href="#aboutMe">OM MIG</a></li>
-                        <li><a id="" href="#freeTime">INTRESSEN</a></li>
-                        <li><a id="" href="#work">PROJEKT</a></li>
-                        <li><a id="" href="#contact">KONTAKT</a></li>
+                        <li class="list"><a id="afterClick" class="drop-links" href="#aboutMe">OM MIG</a></li>
+                        <li class="list"><a id="afterClick2" class="drop-links" href="#freeTime">INTRESSEN</a></li>
+                        <li class="list"><a id="afterClick3" class="drop-links" href="#work">PROJEKT</a></li>
+                        <li class="list"><a id="afterClick4" class="drop-links" href="#contact">KONTAKT</a></li>
                     </div>
                 </div>
             </div>
