updated text and pictures

--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
     <header>
        
         <div class="flex width">
-            <div class="flex margin width iconHide">  
+            <div class="flex margin iconHide">  
                 <i id="toggleThis" class="fas fa-ellipsis-v"></i>  
             </div>
-            <div class="myName flex width margin fonts">
+            <div class="myName flex margin fonts headerFlexStart">
                 <h4>MALIN WEDIN</h4>
             </div>
-            <nav class="width">
-                <ul class="center space flex margin list paddingUl">
+            <nav class="flex headerFlexEnd">
+                <ul class="center flex margin list paddingUl">
                     <li class="paddingHeader"><a class="nav-links" href="#aboutMe">OM MIG</a></li>
                     <li class="paddingHeader"> <a class="nav-links" href="#freeTime">INTRESSEN</a></li>
-                    <li class="paddingHeader"> <a class="nav-links" href="#freeTime">PROJEKT</a></li>
                     <li class="paddingHeader"><a class="nav-links" href="#contact">KONTAKT</a></li>
                 </ul>
             </nav>
@@ -39,7 +38,6 @@
                 <div class="flex column">
                     <li class="list margin"><a id="afterClick" class="drop-links" href="#aboutMe">OM MIG</a></li>
                     <li class="list margin"><a id="afterClick2" class="drop-links" href="#freeTime">INTRESSEN</a></li>
-                    <li class="list margin"><a id="afterClick3" class="drop-links" href="#work">PROJEKT</a></li>
                     <li class="list margin"><a id="afterClick4" class="drop-links" href="#contact">KONTAKT</a></li>
                 </div>
             </div>
@@ -51,38 +49,40 @@
             <img class="imgTop" src="./images/skanor1.jpg" alt="">
             <div class="mainWidth">
                 <div id="aboutMe">
-                        <h3 class="mainPaddingTop">OM MIG</h3>
+                        <h3 class="mainPaddingTop marginBottom">OM MIG</h3>
                         <p>Hej, jag heter Malin Wedin och är en Göteborgsbaserad tjej på 30 år.</p>
                         <p>Efter 10 år med nya destinationer varje dag så var det dags för något annat.</p>
-                        <p>Nu studerar jag Front end developer på Medieinstitutet och kämpar på för att förstå kodens värld</p>
+                        <p>Nu studerar jag Front end developer på Medieinstitutet och kämpar på för att förstå kodens värld.</p>
                 </div>
                 <div id="freeTime">
-                    <h3 class="mainPaddingTop">MIN FRITID</h3>
-                    <div>
-                        <img class="myPhotos" src="./images/bread.jpg" alt="">
-                        <img id="photo2" class="myPhotos" src="./images/flowers.JPEG" alt="">
-                        <img id="photo3" class="myPhotos" src="./images/painting.JPEG" alt="">
-                        <img id="photo4" class="myPhotos" src="./images/vara.jpg" alt="">
-                        <img class="myPhotos" src="./images/bada.jpg" alt="">
+                    <h3 class="mainPaddingTop marginBottom">INTRESSEN</h3>
+                    <p>Baka bröd.</p>
+                    <p>Växter och blommor.</p>
+                    <p>Måla är något jag gjort länge. Men tyvärr är det något som ofta prioriteras bort då tiden inte alltid räcker till.</p>
+                    <p>Fotograferar gärna allt och lite till. Vackra landskap går ju inte att låta bli.</p>
+
+                    <div class="flex">
+                        <div class="flex center">
+                            <img id="photo1" class="myPhotos marginPhotos marginPhotosTop" src="./images/bread.jpg" alt="">
+                            <img id="photo2" class="myPhotos marginPhotosTop" src="./images/flowers.JPEG" alt="">
+                        </div>
                     </div>
-                    <p>Växter. Fotografi. Måla. Heminredning. Bada.</p>
-                    <p></p>
-                    <p></p>
+                        <div class="flex center">
+                            <img id="photo3" class="myPhotos marginPhotos marginPhotosTop" src="./images/painting.JPEG" alt="">
+                            <img id="photo4" class="myPhotos marginPhotosTop" src="./images/vara.jpg" alt="">
+                        </div>
+                    </div>
                 </div>
                 <div id="contact">
-                    <h3 class="mainPaddingTop">KONTAKT</h3>
-                    <p>GitHub</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis culpa fuga consequuntur quibusdam eaque amet eos tempore, placeat ullam distinctio perferendis maxime neque magnam non? Ipsam provident inventore amet natus?</p>
+                    <h3 class="mainPaddingTop marginBottom">KONTAKT</h3>
+                    <p>Vill du ha kontakt med mig så skicka iväg ett mail</p>
+                    <p><i class="far fa-envelope"></i>malin.wedinbackman@medieinstitutet.se</p>
                 </div>
             </div>
         </div>
             
     </main>
 
-    <footer>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, eaque? Alias magni tempore voluptatum molestiae in laboriosam ratione impedit praesentium eum possimus quaerat qui, autem necessitatibus molestias, mollitia corporis cumque?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, eaque? Alias magni tempore voluptatum molestiae in laboriosam ratione impedit praesentium eum possimus quaerat qui, autem necessitatibus molestias, mollitia corporis cumque?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, eaque? Alias magni tempore voluptatum molestiae in laboriosam ratione impedit praesentium eum possimus quaerat qui, autem necessitatibus molestias, mollitia corporis cumque?</p>
-    </footer>
+ 
 </body>
 </html>
