--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script defer src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/53610cf1b6.js" crossorigin="anonymous"></script>
-    <title>Mn - welcome</title>
+    <title>MALIN WEDIN</title>
 </head>
 <body>
     <header>
